Bug 1148081 - Cubic Bezier tooltip styling updates to prevent unnecessary overflow. r=bgrins
UltraBlame original commit: 3054afc750a14ab63e72f8e78320337e292f1512

--- a/browser/devtools/shared/widgets/cubic-bezier.css
+++ b/browser/devtools/shared/widgets/cubic-bezier.css
@@ -862,6 +862,27 @@ splitter
 color
 )
 ;
+padding
+-
+right
+:
+4px
+;
+/
+*
+Visual
+balance
+for
+the
+panel
+-
+arrowcontent
+border
+on
+the
+left
+*
+/
 }
 #
 preset
@@ -874,7 +895,7 @@ flex
 ;
 width
 :
-94
+95
 %
 ;
 border
@@ -914,16 +935,11 @@ background
 )
 ;
 margin
--
-left
-:
-4px
-;
-margin
--
-top
 :
 3px
+auto
+0
+auto
 ;
 }
 #
@@ -947,15 +963,10 @@ none
 .
 category
 {
-flex
-:
-1
-1
-auto
-;
 padding
 :
 5px
+0px
 ;
 width
 :
@@ -1113,7 +1124,7 @@ overflow
 -
 y
 :
-scroll
+auto
 ;
 }
 .
@@ -1124,6 +1135,12 @@ list
 display
 :
 none
+;
+padding
+-
+top
+:
+6px
 ;
 }
 .
@@ -1147,19 +1164,9 @@ justify
 -
 content
 :
-left
-;
-padding
+flex
 -
-left
-:
-4px
-;
-padding
--
-top
-:
-3px
+start
 ;
 }
 .
@@ -1171,20 +1178,15 @@ pointer
 ;
 width
 :
-55px
+33
+.
+33
+%
 ;
 margin
 :
 5px
-11px
 0px
-0px
-;
-text
--
-transform
-:
-capitalize
 ;
 text
 -
@@ -1229,6 +1231,11 @@ body
 background
 )
 ;
+margin
+:
+0
+auto
+;
 }
 .
 theme
@@ -1250,12 +1257,6 @@ color
 preset
 p
 {
-text
--
-align
-:
-center
-;
 font
 -
 size
@@ -1264,18 +1265,12 @@ size
 .
 9em
 ;
-line
--
-height
-:
-0px
-;
 margin
 :
 2px
+auto
 0px
-0px
-0p
+auto
 ;
 color
 :
@@ -1291,6 +1286,12 @@ color
 -
 alt
 )
+;
+text
+-
+transform
+:
+capitalize
 ;
 }
 .
