Bug 969914 - Make developer toolbar match the light devtools theme when applied;r=jwalker,r=pbrosset
UltraBlame original commit: 848604d33facee4e37d89e44d72f47c165f7c97b

--- a/browser/themes/shared/devtools/commandline.css
+++ b/browser/themes/shared/devtools/commandline.css
@@ -56,6 +56,272 @@ MPL
 .
 *
 /
+/
+*
+NOTE
+:
+THESE
+NEED
+TO
+STAY
+IN
+SYNC
+WITH
+LIGHT
+-
+THEME
+.
+CSS
+AND
+DARK
+-
+THEME
+.
+CSS
+.
+We
+are
+copy
+/
+pasting
+variables
+from
+light
+-
+theme
+and
+dark
+-
+theme
+since
+they
+aren
+'
+t
+loaded
+in
+this
+context
+(
+within
+commandlineoutput
+.
+xhtml
+and
+commandlinetooltip
+.
+xhtml
+)
+.
+*
+/
+:
+root
+[
+devtoolstheme
+=
+"
+light
+"
+]
+{
+-
+-
+gcli
+-
+background
+-
+color
+:
+#
+ebeced
+;
+/
+*
+-
+-
+theme
+-
+tab
+-
+toolbar
+-
+background
+*
+/
+-
+-
+gcli
+-
+input
+-
+focused
+-
+background
+:
+#
+f7f7f7
+;
+/
+*
+-
+-
+theme
+-
+sidebar
+-
+background
+*
+/
+-
+-
+gcli
+-
+input
+-
+color
+:
+#
+18191a
+;
+/
+*
+-
+-
+theme
+-
+body
+-
+color
+*
+/
+-
+-
+gcli
+-
+border
+-
+color
+:
+#
+aaaaaa
+;
+/
+*
+-
+-
+theme
+-
+splitter
+-
+color
+*
+/
+}
+:
+root
+[
+devtoolstheme
+=
+"
+dark
+"
+]
+{
+-
+-
+gcli
+-
+background
+-
+color
+:
+#
+343c45
+;
+/
+*
+-
+-
+theme
+-
+toolbar
+-
+background
+*
+/
+-
+-
+gcli
+-
+input
+-
+focused
+-
+background
+:
+#
+252c33
+;
+/
+*
+-
+-
+theme
+-
+tab
+-
+toolbar
+-
+background
+*
+/
+-
+-
+gcli
+-
+input
+-
+color
+:
+#
+b6babf
+;
+/
+*
+-
+-
+theme
+-
+body
+-
+color
+-
+alt
+*
+/
+-
+-
+gcli
+-
+border
+-
+color
+:
+black
+;
+/
+*
+-
+-
+theme
+-
+splitter
+-
+color
+*
+/
+}
 .
 gcli
 -
@@ -73,13 +339,15 @@ box
 ;
 color
 :
-hsl
+var
 (
-210
-30
-%
-85
-%
+-
+-
+gcli
+-
+input
+-
+color
 )
 ;
 }
@@ -100,61 +368,15 @@ border
 :
 1px
 solid
-hsl
+var
 (
-206
-37
-%
-4
-%
-)
-;
-box
 -
-shadow
-:
-0
-1px
-0
-hsla
-(
-209
-29
-%
-72
-%
-.
-25
-)
-inset
-;
-background
 -
-image
-:
-linear
+gcli
 -
-gradient
-(
-hsla
-(
-209
-18
-%
-18
-%
-0
-.
-9
-)
-hsl
-(
-209
-23
-%
-18
-%
-)
+border
+-
+color
 )
 ;
 border
@@ -162,6 +384,21 @@ border
 radius
 :
 3px
+;
+background
+-
+color
+:
+var
+(
+-
+-
+gcli
+-
+background
+-
+color
+)
 ;
 }
 #
@@ -250,13 +487,15 @@ left
 :
 1px
 solid
-hsl
+var
 (
-206
-37
-%
-4
-%
+-
+-
+gcli
+-
+border
+-
+color
 )
 ;
 border
@@ -265,26 +504,30 @@ right
 :
 1px
 solid
-hsl
+var
 (
-206
-37
-%
-4
-%
+-
+-
+gcli
+-
+border
+-
+color
 )
 ;
 background
 -
 color
 :
-hsl
+var
 (
-209
-23
-%
-18
-%
+-
+-
+gcli
+-
+background
+-
+color
 )
 ;
 }
@@ -341,13 +584,15 @@ none
 ;
 color
 :
-hsl
+var
 (
-210
-30
-%
-85
-%
+-
+-
+gcli
+-
+input
+-
+color
 )
 ;
 }
@@ -445,13 +690,15 @@ pre
 {
 color
 :
-hsl
+var
 (
-210
-30
-%
-95
-%
+-
+-
+gcli
+-
+input
+-
+color
 )
 ;
 }
@@ -532,26 +779,30 @@ background
 -
 color
 :
-hsl
+var
 (
-209
-23
-%
-18
-%
+-
+-
+gcli
+-
+background
+-
+color
 )
 ;
 border
 :
 1px
 solid
-hsl
+var
 (
-206
-37
-%
-4
-%
+-
+-
+gcli
+-
+border
+-
+color
 )
 ;
 }
@@ -574,13 +825,15 @@ before
 {
 color
 :
-hsl
+var
 (
-210
-30
-%
-85
-%
+-
+-
+gcli
+-
+input
+-
+color
 )
 ;
 -
@@ -689,13 +942,15 @@ end
 ;
 color
 :
-hsl
+var
 (
-210
-30
-%
-75
-%
+-
+-
+gcli
+-
+input
+-
+color
 )
 ;
 }
@@ -720,15 +975,17 @@ background
 -
 color
 :
-hsla
+var
 (
-0
-0
-%
-0
-%
-.
-3
+-
+-
+gcli
+-
+input
+-
+focused
+-
+background
 )
 ;
 }
