--- a/browser/themes/shared/devtools/commandline.inc.css
+++ b/browser/themes/shared/devtools/commandline.inc.css
@@ -67,6 +67,408 @@ Developer
 toolbar
 *
 /
+/
+*
+NOTE
+:
+THESE
+NEED
+TO
+STAY
+IN
+SYNC
+WITH
+LIGHT
+-
+THEME
+.
+CSS
+AND
+DARK
+-
+THEME
+.
+CSS
+.
+We
+are
+copy
+/
+pasting
+variables
+from
+light
+-
+theme
+and
+dark
+-
+theme
+since
+they
+aren
+'
+t
+loaded
+in
+this
+context
+(
+within
+browser
+.
+css
+)
+.
+*
+/
+:
+root
+[
+devtoolstheme
+=
+"
+light
+"
+]
+#
+developer
+-
+toolbar
+{
+-
+-
+gcli
+-
+background
+-
+color
+:
+#
+ebeced
+;
+/
+*
+-
+-
+theme
+-
+tab
+-
+toolbar
+-
+background
+*
+/
+-
+-
+gcli
+-
+input
+-
+background
+:
+#
+f0f1f2
+;
+/
+*
+-
+-
+theme
+-
+toolbar
+-
+background
+*
+/
+-
+-
+gcli
+-
+input
+-
+focused
+-
+background
+:
+#
+f7f7f7
+;
+/
+*
+-
+-
+theme
+-
+sidebar
+-
+background
+*
+/
+-
+-
+gcli
+-
+input
+-
+color
+:
+#
+18191a
+;
+/
+*
+-
+-
+theme
+-
+body
+-
+color
+*
+/
+-
+-
+gcli
+-
+border
+-
+color
+:
+#
+aaaaaa
+;
+/
+*
+-
+-
+theme
+-
+splitter
+-
+color
+*
+/
+-
+-
+selection
+-
+background
+:
+#
+4c9ed9
+;
+/
+*
+-
+-
+theme
+-
+selection
+-
+background
+*
+/
+-
+-
+selection
+-
+color
+:
+#
+f5f7fa
+;
+/
+*
+-
+-
+theme
+-
+selection
+-
+color
+*
+/
+}
+:
+root
+[
+devtoolstheme
+=
+"
+dark
+"
+]
+#
+developer
+-
+toolbar
+{
+-
+-
+gcli
+-
+background
+-
+color
+:
+#
+343c45
+;
+/
+*
+-
+-
+theme
+-
+toolbar
+-
+background
+*
+/
+-
+-
+gcli
+-
+input
+-
+background
+:
+rgba
+(
+37
+44
+51
+.
+6
+)
+;
+/
+*
+-
+-
+theme
+-
+tab
+-
+toolbar
+-
+background
+*
+/
+-
+-
+gcli
+-
+input
+-
+focused
+-
+background
+:
+#
+252c33
+;
+/
+*
+-
+-
+theme
+-
+tab
+-
+toolbar
+-
+background
+*
+/
+-
+-
+gcli
+-
+input
+-
+color
+:
+#
+b6babf
+;
+/
+*
+-
+-
+theme
+-
+body
+-
+color
+-
+alt
+*
+/
+-
+-
+gcli
+-
+border
+-
+color
+:
+black
+;
+/
+*
+-
+-
+theme
+-
+splitter
+-
+color
+*
+/
+-
+-
+selection
+-
+background
+:
+#
+1d4f73
+;
+/
+*
+-
+-
+theme
+-
+selection
+-
+background
+*
+/
+-
+-
+selection
+-
+color
+:
+#
+f5f7fa
+;
+/
+*
+-
+-
+theme
+-
+selection
+-
+color
+*
+/
+}
 #
 developer
 -
@@ -93,56 +495,33 @@ background
 -
 color
 :
-#
-343C45
+var
+(
+-
+-
+gcli
+-
+background
+-
+color
+)
 ;
-/
-*
-Toolbars
-*
-/
 border
 -
 top
 :
 1px
 solid
-#
-060a0d
-;
-box
--
-shadow
-:
-0
-1px
-0
-hsla
+var
 (
-204
-45
-%
-98
-%
-.
-05
-)
-inset
-0
 -
-1px
-0
-hsla
-(
-206
-37
-%
-4
-%
-.
-1
+-
+gcli
+-
+border
+-
+color
 )
-inset
 ;
 }
 #
@@ -194,6 +573,84 @@ margin
 :
 auto
 10px
+;
+}
+:
+root
+[
+devtoolstheme
+=
+"
+light
+"
+]
+#
+developer
+-
+toolbar
+>
+toolbarbutton
+:
+not
+(
+[
+checked
+=
+true
+]
+)
+>
+image
+:
+root
+[
+devtoolstheme
+=
+"
+light
+"
+]
+.
+gclitoolbar
+-
+input
+-
+node
+:
+not
+(
+[
+focused
+=
+true
+]
+)
+:
+:
+before
+{
+filter
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+filters
+.
+svg
+#
+invert
+"
+)
 ;
 }
 .
@@ -884,6 +1341,12 @@ color
 :
 transparent
 ;
+border
+-
+radius
+:
+0
+;
 }
 .
 gclitoolbar
@@ -901,21 +1364,31 @@ none
 ;
 color
 :
-hsl
+var
 (
-210
-30
-%
-85
-%
+-
+-
+gcli
+-
+input
+-
+color
 )
 ;
 background
 -
 color
 :
-#
-242b33
+var
+(
+-
+-
+gcli
+-
+input
+-
+background
+)
 ;
 background
 -
@@ -936,47 +1409,33 @@ box
 -
 shadow
 :
+1px
 0
-1px
-1px
-hsla
+0
+var
 (
-206
-37
-%
-4
-%
-.
-2
-)
-inset
-1px
-0
-0
-hsla
-(
-206
-37
-%
-4
-%
-.
-2
+-
+-
+gcli
+-
+border
+-
+color
 )
 inset
 -
 1px
 0
 0
-hsla
+var
 (
-206
-37
-%
-4
-%
-.
-2
+-
+-
+gcli
+-
+border
+-
+color
 )
 inset
 ;
@@ -1015,8 +1474,18 @@ background
 -
 color
 :
-#
-232e38
+var
+(
+-
+-
+gcli
+-
+input
+-
+focused
+-
+background
+)
 ;
 }
 .
@@ -1209,24 +1678,24 @@ background
 -
 color
 :
-hsl
+var
 (
-210
-30
-%
-85
-%
+-
+-
+selection
+-
+background
 )
 ;
 color
 :
-hsl
+var
 (
-210
-24
-%
-16
-%
+-
+-
+selection
+-
+color
 )
 ;
 text
