--- a/browser/themes/shared/devtools/dark-theme.css
+++ b/browser/themes/shared/devtools/dark-theme.css
@@ -101,6 +101,25 @@ docs
 Tools
 /
 DevToolsColors
+.
+*
+Changes
+should
+be
+kept
+in
+sync
+with
+commandline
+.
+css
+and
+commandline
+.
+inc
+.
+css
+.
 *
 /
 :
