Bug 1154814 - Move font rules from 'rt' to 'rtc, rt' and make text-emphasis conditional. r=heycam
UltraBlame original commit: c46e5b8fb2f05ae68f9ec254d8d7ad9d96638852

--- a/layout/style/html.css
+++ b/layout/style/html.css
@@ -5005,22 +5005,6 @@ ruby
 -
 text
 ;
-font
--
-variant
--
-east
--
-asian
-:
-ruby
-;
-text
--
-emphasis
-:
-none
-;
 }
 rtc
 {
@@ -5055,6 +5039,36 @@ height
 :
 1
 ;
+font
+-
+variant
+-
+east
+-
+asian
+:
+ruby
+;
+}
+supports
+(
+text
+-
+emphasis
+:
+none
+)
+{
+rtc
+rt
+{
+text
+-
+emphasis
+:
+none
+;
+}
 }
 rtc
 :
