Bug 1148923 - min-width the font menulists, r=jaws
UltraBlame original commit: a6b4ae672ec95094ebaaacde069b84bb56eb50b9

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -2084,6 +2084,34 @@ Dialog
 *
 *
 *
+Font
+dialog
+menulist
+fixes
+*
+/
+#
+defaultFontType
+#
+serif
+#
+sans
+-
+serif
+#
+monospace
+{
+min
+-
+width
+:
+30ch
+;
+}
+/
+*
+*
+*
 Sync
 migration
 *
