--- a/browser/themes/shared/translation/infobar.inc.css
+++ b/browser/themes/shared/translation/infobar.inc.css
@@ -288,6 +288,28 @@ value
 translation
 "
 ]
+hbox
+[
+anonid
+=
+"
+details
+"
+]
+{
+overflow
+:
+hidden
+;
+}
+notification
+[
+value
+=
+"
+translation
+"
+]
 button
 notification
 [
