--- a/browser/devtools/styleinspector/ruleview.css
+++ b/browser/devtools/styleinspector/ruleview.css
@@ -56,9 +56,89 @@ MPL
 .
 *
 /
-#
+*
+{
+box
+-
+sizing
+:
+border
+-
+box
+;
+}
+:
 root
 {
+height
+:
+100
+%
+;
+}
+body
+{
+margin
+:
+0
+;
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
+;
+height
+:
+100
+%
+;
+}
+#
+ruleview
+-
+container
+{
+-
+moz
+-
+user
+-
+select
+:
+text
+;
+overflow
+:
+auto
+;
+min
+-
+height
+:
+0
+;
+flex
+:
+1
+;
+}
+#
+root
+.
+devtools
+-
+toolbar
+{
+width
+:
+100
+%
+;
 display
 :
 -
