--- a/browser/themes/shared/devtools/ruleview.css
+++ b/browser/themes/shared/devtools/ruleview.css
@@ -56,6 +56,62 @@ MPL
 .
 *
 /
+/
+*
+CSS
+Variables
+specific
+to
+this
+panel
+that
+aren
+'
+t
+defined
+by
+the
+themes
+*
+/
+.
+theme
+-
+light
+{
+-
+-
+rule
+-
+highlight
+-
+background
+-
+color
+:
+#
+ffee99
+;
+}
+.
+theme
+-
+dark
+{
+-
+-
+rule
+-
+highlight
+-
+background
+-
+color
+:
+#
+594724
+;
+}
 .
 ruleview
 {
@@ -1147,6 +1203,29 @@ theme
 highlight
 -
 green
+)
+;
+}
+.
+ruleview
+-
+highlight
+{
+background
+-
+color
+:
+var
+(
+-
+-
+rule
+-
+highlight
+-
+background
+-
+color
 )
 ;
 }
