--- a/browser/themes/shared/devtools/toolbars.inc.css
+++ b/browser/themes/shared/devtools/toolbars.inc.css
@@ -134,6 +134,141 @@ aaa
 )
 /
 *
+CSS
+Variables
+specific
+to
+the
+devtools
+toolbar
+that
+aren
+'
+t
+defined
+by
+the
+themes
+*
+/
+.
+theme
+-
+light
+{
+-
+-
+searchbox
+-
+background
+-
+color
+:
+#
+ffee99
+;
+-
+-
+searchbox
+-
+border
+-
+color
+:
+#
+ffbf00
+;
+-
+-
+searcbox
+-
+no
+-
+match
+-
+background
+-
+color
+:
+#
+ffe5e5
+;
+-
+-
+searcbox
+-
+no
+-
+match
+-
+border
+-
+color
+:
+#
+e52e2e
+;
+}
+.
+theme
+-
+dark
+{
+-
+-
+searchbox
+-
+background
+-
+color
+:
+#
+4d4222
+;
+-
+-
+searchbox
+-
+border
+-
+color
+:
+#
+d99f2b
+;
+-
+-
+searcbox
+-
+no
+-
+match
+-
+background
+-
+color
+:
+#
+402325
+;
+-
+-
+searcbox
+-
+no
+-
+match
+-
+border
+-
+color
+:
+#
+cc3d3d
+;
+}
+/
+*
 Toolbars
 *
 /
@@ -2719,7 +2854,7 @@ padding
 -
 end
 :
-12px
+4px
 ;
 background
 -
@@ -2798,6 +2933,658 @@ png
 )
 ;
 }
+.
+devtools
+-
+searchinput
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+background
+-
+position
+:
+calc
+(
+100
+%
+-
+8px
+)
+center
+;
+}
+.
+devtools
+-
+searchinput
+>
+.
+textbox
+-
+input
+-
+box
+>
+.
+textbox
+-
+search
+-
+icons
+>
+.
+textbox
+-
+search
+-
+icon
+{
+visibility
+:
+hidden
+;
+}
+/
+*
+Searchbox
+is
+a
+div
+container
+element
+for
+a
+search
+input
+element
+*
+/
+.
+devtools
+-
+searchbox
+{
+display
+:
+-
+moz
+-
+box
+;
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+position
+:
+relative
+;
+}
+.
+devtools
+-
+rule
+-
+searchbox
+{
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+padding
+-
+right
+:
+23px
+;
+width
+:
+100
+%
+;
+font
+:
+inherit
+;
+}
+.
+devtools
+-
+rule
+-
+searchbox
+[
+filled
+]
+{
+background
+-
+color
+:
+var
+(
+-
+-
+searchbox
+-
+background
+-
+color
+)
+;
+border
+-
+color
+:
+var
+(
+-
+-
+searchbox
+-
+border
+-
+color
+)
+;
+}
+.
+devtools
+-
+style
+-
+searchbox
+-
+no
+-
+match
+{
+background
+-
+color
+:
+var
+(
+-
+-
+searcbox
+-
+no
+-
+match
+-
+background
+-
+color
+)
+!
+important
+;
+border
+-
+color
+:
+var
+(
+-
+-
+searcbox
+-
+no
+-
+match
+-
+border
+-
+color
+)
+!
+important
+;
+}
+.
+devtools
+-
+no
+-
+search
+-
+result
+{
+border
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+red
+)
+!
+important
+;
+}
+.
+devtools
+-
+searchinput
+-
+clear
+{
+position
+:
+absolute
+;
+top
+:
+3
+.
+5px
+;
+right
+:
+7px
+;
+padding
+:
+0
+;
+border
+:
+0
+;
+width
+:
+16px
+;
+height
+:
+16px
+;
+background
+-
+position
+:
+0
+0
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+color
+:
+transparent
+;
+}
+.
+theme
+-
+dark
+.
+devtools
+-
+searchinput
+-
+clear
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+search
+-
+clear
+-
+dark
+.
+svg
+"
+)
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+searchinput
+-
+clear
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+search
+-
+clear
+-
+light
+.
+svg
+"
+)
+;
+}
+.
+devtools
+-
+style
+-
+searchbox
+-
+no
+-
+match
++
+.
+devtools
+-
+searchinput
+-
+clear
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+search
+-
+clear
+-
+failed
+.
+svg
+"
+)
+!
+important
+;
+}
+.
+devtools
+-
+searchinput
+-
+clear
+:
+hover
+{
+background
+-
+position
+:
+-
+16px
+0
+;
+}
+.
+theme
+-
+dark
+.
+devtools
+-
+searchinput
+>
+.
+textbox
+-
+input
+-
+box
+>
+.
+textbox
+-
+search
+-
+icons
+>
+.
+textbox
+-
+search
+-
+clear
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+search
+-
+clear
+-
+dark
+.
+svg
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+16px
+16px
+0
+)
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+searchinput
+>
+.
+textbox
+-
+input
+-
+box
+>
+.
+textbox
+-
+search
+-
+icons
+>
+.
+textbox
+-
+search
+-
+clear
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+search
+-
+clear
+-
+light
+.
+svg
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+16px
+16px
+0
+)
+;
+}
+.
+devtools
+-
+searchinput
+>
+.
+textbox
+-
+input
+-
+box
+>
+.
+textbox
+-
+search
+-
+icons
+>
+.
+textbox
+-
+search
+-
+clear
+:
+hover
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+32px
+16px
+16px
+)
+;
+}
 media
 (
 min
@@ -2857,86 +3644,6 @@ png
 )
 ;
 }
-}
-.
-devtools
--
-searchinput
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-background
--
-position
-:
-calc
-(
-100
-%
--
-8px
-)
-center
-;
-}
-.
-devtools
--
-searchinput
->
-.
-textbox
--
-input
--
-box
->
-.
-textbox
--
-search
--
-icons
-{
-display
-:
-none
-;
-}
-.
-devtools
--
-no
--
-search
--
-result
-{
-border
--
-color
-:
-var
-(
--
--
-theme
--
-highlight
--
-red
-)
-!
-important
-;
 }
 /
 *
