Bug 1120616 - Part 3: Adjust the styles in the computed view's filter style search r=bgrins
UltraBlame original commit: d78c245949df0b55d41a7da45c28d8a10b8b38f8

--- a/browser/themes/shared/devtools/toolbars.inc.css
+++ b/browser/themes/shared/devtools/toolbars.inc.css
@@ -366,6 +366,17 @@ padding
 :
 0
 ;
+line
+-
+height
+:
+-
+moz
+-
+block
+-
+height
+;
 }
 .
 devtools
@@ -384,6 +395,12 @@ margin
 padding
 :
 0
+;
+vertical
+-
+align
+:
+bottom
 ;
 }
 .
