Bug 1149068 - Use the correct font for the Sans Serif font button.  ui-r=maritz, r=jaws, r=margaret
UltraBlame original commit: be151c6f68b20c6bd39b3f1c3c7cce80c26cc214

--- a/toolkit/themes/shared/aboutReader.css
+++ b/toolkit/themes/shared/aboutReader.css
@@ -204,6 +204,12 @@ serif
 sans
 -
 serif
+-
+button
+.
+sans
+-
+serif
 .
 remove
 -
@@ -213,10 +219,6 @@ font
 -
 family
 :
-"
-Fira
-Sans
-"
 Helvetica
 Arial
 sans
@@ -228,6 +230,10 @@ serif
 serif
 .
 serif
+-
+button
+.
+serif
 .
 remove
 -
@@ -237,10 +243,6 @@ font
 -
 family
 :
-"
-Charis
-SIL
-"
 Georgia
 "
 Times
@@ -447,10 +449,6 @@ font
 -
 family
 :
-"
-Fira
-Sans
-"
 Helvetica
 Arial
 sans
@@ -1211,10 +1209,6 @@ font
 -
 family
 :
-"
-Fira
-Sans
-"
 Helvetica
 Arial
 sans
@@ -1929,56 +1923,11 @@ font
 -
 size
 :
-58px
+62px
 ;
 height
 :
 100px
-;
-}
-/
-*
-Make
-the
-serif
-button
-content
-the
-same
-size
-as
-the
-sans
--
-serif
-button
-content
-.
-*
-/
-#
-font
--
-type
--
-buttons
->
-.
-serif
--
-button
-{
-padding
--
-top
-:
-1px
-;
-font
--
-size
-:
-60px
 ;
 }
 #
@@ -2095,6 +2044,26 @@ solid
 FC6420
 ;
 }
+/
+*
+Make
+the
+serif
+button
+content
+the
+same
+size
+as
+the
+sans
+-
+serif
+button
+content
+.
+*
+/
 #
 font
 -
@@ -2104,7 +2073,8 @@ buttons
 >
 button
 >
-div
+.
+description
 {
 color
 :
@@ -2122,9 +2092,253 @@ margin
 top
 :
 -
+5px
+;
+}
+/
+*
+Font
+sizes
+are
+different
+per
+-
+platform
+so
+we
+need
+custom
+CSS
+to
+line
+them
+up
+.
+*
+/
+%
+ifdef
+XP_MACOSX
+#
+font
+-
+type
+-
+buttons
+>
+.
+sans
+-
+serif
+-
+button
+>
+.
+name
+{
+margin
+-
+top
+:
+10px
+;
+}
+#
+font
+-
+type
+-
+buttons
+>
+.
+sans
+-
+serif
+-
+button
+>
+.
+description
+{
+margin
+-
+top
+:
+-
 4px
 ;
 }
+#
+font
+-
+type
+-
+buttons
+>
+.
+serif
+-
+button
+>
+.
+name
+{
+font
+-
+size
+:
+63px
+;
+}
+%
+elifdef
+XP_WIN
+#
+font
+-
+type
+-
+buttons
+>
+.
+sans
+-
+serif
+-
+button
+>
+.
+name
+{
+margin
+-
+top
+:
+2px
+;
+}
+#
+font
+-
+type
+-
+buttons
+>
+.
+sans
+-
+serif
+-
+button
+>
+.
+description
+{
+margin
+-
+top
+:
+-
+4px
+;
+}
+#
+font
+-
+type
+-
+buttons
+>
+.
+serif
+-
+button
+>
+.
+name
+{
+font
+-
+size
+:
+63px
+;
+}
+%
+else
+#
+font
+-
+type
+-
+buttons
+>
+.
+sans
+-
+serif
+-
+button
+>
+.
+name
+{
+margin
+-
+top
+:
+5px
+;
+}
+#
+font
+-
+type
+-
+buttons
+>
+.
+sans
+-
+serif
+-
+button
+>
+.
+description
+{
+margin
+-
+top
+:
+-
+8px
+;
+}
+#
+font
+-
+type
+-
+buttons
+>
+.
+serif
+-
+button
+>
+.
+name
+{
+font
+-
+size
+:
+70px
+;
+}
+%
+endif
 .
 button
 :
@@ -2213,28 +2427,6 @@ sample
 display
 :
 none
-;
-}
-.
-serif
--
-button
-{
-font
--
-family
-:
-"
-Charis
-SIL
-"
-Georgia
-"
-Times
-New
-Roman
-"
-serif
 ;
 }
 .
