Bug 1153630 - Allow buttons in the Loop panel to be bigger if required as L10n needs. r=dmose
UltraBlame original commit: 2fdb6d174440174c08bdf13d5c24081d31366a3e

--- a/browser/components/loop/content/css/panel.css
+++ b/browser/components/loop/content/css/panel.css
@@ -793,25 +793,6 @@ padding
 5rem
 1rem
 ;
-height
-:
-auto
-;
-/
-*
-Needed
-to
-override
-.
-button
-'
-s
-height
-:
-26px
-;
-*
-/
 }
 #
 fte
@@ -2476,6 +2457,8 @@ radius
 :
 2px
 ;
+min
+-
 height
 :
 26px
