--- a/browser/components/loop/content/css/panel.css
+++ b/browser/components/loop/content/css/panel.css
@@ -1517,9 +1517,27 @@ padding
 5rem
 1rem
 ;
+/
+*
+Always
+show
+the
+default
+pointer
+even
+over
+the
+text
+part
+of
+the
+entry
+.
+*
+/
 cursor
 :
-pointer
+default
 ;
 }
 .
@@ -1967,10 +1985,6 @@ mode
 :
 forwards
 ;
-cursor
-:
-pointer
-;
 }
 .
 room
@@ -2217,123 +2231,6 @@ vertical
 align
 :
 middle
-;
-}
-/
-*
-Edit
-in
-place
-*
-/
-.
-room
--
-list
->
-.
-room
--
-entry
->
-h2
->
-.
-edit
--
-in
--
-place
-{
-cursor
-:
-text
-;
-}
-.
-room
--
-list
->
-.
-room
--
-entry
->
-h2
->
-.
-edit
--
-in
--
-place
-:
-hover
-{
-background
-:
-#
-fefbc4
-;
-}
-.
-room
--
-list
->
-.
-room
--
-entry
->
-h2
->
-form
-{
-display
-:
-inline
--
-block
-;
-}
-.
-room
--
-list
->
-.
-room
--
-entry
->
-h2
->
-form
->
-input
-{
-border
-:
-none
-;
-background
-:
-#
-fefbc4
-;
-font
--
-size
-:
-13
-.
-6px
-;
-padding
-:
-0
 ;
 }
 /
