--- a/layout/style/test/test_animations_omta.html
+++ b/layout/style/test/test_animations_omta.html
@@ -1172,6 +1172,31 @@ opacity
 8
 }
 }
+keyframes
+transformnone
+{
+0
+%
+100
+%
+{
+transform
+:
+translateX
+(
+50px
+)
+}
+25
+%
+75
+%
+{
+transform
+:
+none
+}
+}
 <
 /
 style
@@ -21742,6 +21767,94 @@ Compositor
 anim2
 at
 900ms
+"
+)
+;
+done_div
+(
+)
+;
+/
+/
+Test
+that
+an
+interpolation
+that
+produces
+transform
+:
+none
+doesn
+'
+t
+/
+/
+crash
+.
+new_div
+(
+"
+animation
+:
+transformnone
+1s
+linear
+"
+)
+;
+yield
+waitForPaintsFlushed
+(
+)
+;
+omta_is
+(
+"
+transform
+"
+{
+tx
+:
+50
+}
+RunningOn
+.
+Compositor
+"
+transformnone
+animation
+at
+0ms
+"
+)
+;
+advance_clock
+(
+500
+)
+;
+omta_is
+(
+"
+transform
+"
+{
+tx
+:
+0
+}
+RunningOn
+.
+Compositor
+"
+transformnone
+animation
+at
+500ms
+interpolating
+none
+values
 "
 )
 ;
