--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -2207,6 +2207,14 @@ position
 :
 fixed
 ;
+width
+:
+44px
+;
+height
+:
+47px
+;
 }
 div
 :
@@ -2244,6 +2252,20 @@ div
 position
 :
 absolute
+;
+width
+:
+100
+%
+;
+height
+:
+100
+%
+;
+bottom
+:
+0
 ;
 }
 div
@@ -2319,20 +2341,12 @@ right
 >
 div
 {
-width
-:
-44px
-;
-height
-:
-47px
-;
 background
 -
 position
 :
 center
-center
+bottom
 ;
 background
 -
@@ -2340,8 +2354,14 @@ size
 :
 100
 %
-100
-%
+;
+background
+-
+repeat
+:
+no
+-
+repeat
 ;
 z
 -
