Backed out changeset 5ef9825777a2 (bug 1021499)
UltraBlame original commit: 048b67897b20d966e5341d060d7b4fb4af7d09d9

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -2207,14 +2207,6 @@ position
 :
 fixed
 ;
-width
-:
-44px
-;
-height
-:
-47px
-;
 }
 div
 :
@@ -2252,20 +2244,6 @@ div
 position
 :
 absolute
-;
-width
-:
-100
-%
-;
-height
-:
-100
-%
-;
-bottom
-:
-0
 ;
 }
 div
@@ -2341,12 +2319,20 @@ right
 >
 div
 {
+width
+:
+44px
+;
+height
+:
+47px
+;
 background
 -
 position
 :
 center
-bottom
+center
 ;
 background
 -
@@ -2354,14 +2340,8 @@ size
 :
 100
 %
-;
-background
--
-repeat
-:
-no
--
-repeat
+100
+%
 ;
 z
 -
