Bug 1096413 - Draw border around url bar, search box, and back/forward buttons. r=Gijs
UltraBlame original commit: 19225f260c0f65235d786d3821b6e16d894b925c

--- a/browser/themes/linux/devedition.css
+++ b/browser/themes/linux/devedition.css
@@ -291,12 +291,29 @@ margin
 ;
 border
 :
-none
+1px
+solid
+var
+(
+-
+-
+chrome
+-
+nav
+-
+bar
+-
+controls
+-
+border
+-
+color
+)
 ;
 padding
 :
 2px
-6px
+5px
 ;
 background
 :
@@ -320,6 +337,26 @@ shadow
 none
 !
 important
+;
+}
+#
+forward
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+-
+moz
+-
+border
+-
+start
+:
+none
 ;
 }
 /
