--- a/browser/themes/osx/devedition.css
+++ b/browser/themes/osx/devedition.css
@@ -465,7 +465,7 @@ button
 {
 height
 :
-22px
+24px
 !
 important
 ;
@@ -479,7 +479,24 @@ important
 ;
 border
 :
-none
+1px
+solid
+var
+(
+-
+-
+chrome
+-
+nav
+-
+bar
+-
+controls
+-
+border
+-
+color
+)
 !
 important
 ;
@@ -499,6 +516,46 @@ background
 )
 !
 important
+;
+}
+#
+forward
+-
+button
+{
+-
+moz
+-
+border
+-
+start
+:
+none
+!
+important
+;
+}
+#
+forward
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+margin
+-
+left
+:
+0
+;
+margin
+-
+right
+:
+0
 ;
 }
 #
