--- a/browser/themes/shared/devedition.inc.css
+++ b/browser/themes/shared/devedition.inc.css
@@ -295,6 +295,23 @@ background
 -
 chrome
 -
+nav
+-
+bar
+-
+controls
+-
+border
+-
+color
+:
+#
+1D2328
+;
+-
+-
+chrome
+-
 selection
 -
 color
@@ -1115,7 +1132,7 @@ background
 color
 :
 #
-f0f1f2
+f5f6f7
 ;
 -
 -
@@ -1158,7 +1175,7 @@ buttons
 background
 :
 #
-f0f1f2
+fcfcfc
 ;
 -
 -
@@ -1174,6 +1191,23 @@ background
 :
 #
 DADBDB
+;
+-
+-
+chrome
+-
+nav
+-
+bar
+-
+controls
+-
+border
+-
+color
+:
+#
+ccc
 ;
 -
 -
@@ -1354,7 +1388,7 @@ hover
 background
 :
 #
-D7D7D8
+eaeaea
 ;
 -
 -
@@ -1392,38 +1426,12 @@ active
 -
 background
 :
-rgba
-(
-76
-158
-217
-.
-5
-)
-linear
--
-gradient
-(
-rgba
-(
-76
-158
-217
-.
-5
-)
-rgba
-(
-76
-158
-217
-.
-5
-)
-)
+#
+d7d7d8
 border
 -
 box
+;
 -
 -
 toolbarbutton
@@ -1449,7 +1457,7 @@ rgba
 0
 0
 .
-3
+15
 )
 ;
 -
@@ -1460,15 +1468,8 @@ checkedhover
 -
 backgroundcolor
 :
-rgba
-(
-0
-0
-0
-0
-.
-2
-)
+#
+d7d7d8
 ;
 -
 -
@@ -2102,6 +2103,51 @@ image
 none
 ;
 }
+.
+browserContainer
+>
+.
+findbar
+-
+textbox
+{
+background
+-
+color
+:
+var
+(
+-
+-
+url
+-
+and
+-
+searchbar
+-
+background
+-
+color
+)
+!
+important
+;
+color
+:
+var
+(
+-
+-
+url
+-
+and
+-
+searchbar
+-
+color
+)
+;
+}
 /
 *
 Default
@@ -2292,30 +2338,6 @@ search
 bar
 *
 /
-/
-*
-XXX
-:
-root
-[
-devtoolstheme
-=
-"
-dark
-"
-]
-is
-a
-workaround
-for
-bug
-1096413
-on
-the
-findbar
-.
-*
-/
 #
 urlbar
 #
@@ -2324,23 +2346,6 @@ navigator
 toolbox
 .
 searchbar
--
-textbox
-:
-root
-[
-devtoolstheme
-=
-"
-dark
-"
-]
-.
-browserContainer
->
-findbar
-.
-findbar
 -
 textbox
 {
@@ -2392,7 +2397,24 @@ important
 ;
 border
 :
-none
+1px
+solid
+var
+(
+-
+-
+chrome
+-
+nav
+-
+bar
+-
+controls
+-
+border
+-
+color
+)
 !
 important
 ;
@@ -2401,6 +2423,27 @@ box
 shadow
 :
 none
+!
+important
+;
+}
+#
+urlbar
+{
+-
+moz
+-
+border
+-
+start
+:
+none
+!
+important
+;
+opacity
+:
+1
 !
 important
 ;
