--- a/browser/themes/windows/devedition.css
+++ b/browser/themes/windows/devedition.css
@@ -196,7 +196,7 @@ important
 padding
 :
 2px
-6px
+5px
 !
 important
 ;
@@ -208,13 +208,52 @@ important
 ;
 border
 :
-none
+1px
+solid
+var
+(
+-
+-
+chrome
+-
+nav
+-
+bar
+-
+controls
+-
+border
+-
+color
+)
 !
 important
 ;
 box
 -
 shadow
+:
+none
+!
+important
+;
+}
+#
+forward
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+-
+moz
+-
+border
+-
+start
 :
 none
 !
