Bug 1155863 - Temporarily disable tests that involve table elements within vertical writing mode (not yet supported). r=heycam
UltraBlame original commit: dff88d946047a32ce56f3f146485f0cb0c43c068

--- a/layout/reftests/writing-mode/ua-style-sheet-margin-10-ref.html
+++ b/layout/reftests/writing-mode/ua-style-sheet-margin-10-ref.html
@@ -236,6 +236,22 @@ table
 div
 >
 <
+!
+-
+-
+disabled
+because
+tables
+are
+not
+yet
+vertical
+-
+aware
+;
+bug
+1077521
+<
 div
 class
 =
@@ -281,4 +297,7 @@ table
 <
 /
 div
+>
+-
+-
 >
