--- a/layout/reftests/writing-mode/ua-style-sheet-margin-10.html
+++ b/layout/reftests/writing-mode/ua-style-sheet-margin-10.html
@@ -191,6 +191,22 @@ table
 div
 >
 <
+!
+-
+-
+disabled
+because
+tables
+are
+not
+yet
+vertical
+-
+aware
+;
+bug
+1077521
+<
 div
 class
 =
@@ -236,4 +252,7 @@ table
 <
 /
 div
+>
+-
+-
 >
