--- a/layout/reftests/writing-mode/ua-style-sheet-margin-8-ref.html
+++ b/layout/reftests/writing-mode/ua-style-sheet-margin-8-ref.html
@@ -212,6 +212,22 @@ table
 div
 >
 <
+!
+-
+-
+disabled
+because
+tables
+are
+not
+yet
+vertical
+-
+aware
+;
+bug
+1077521
+<
 div
 class
 =
@@ -254,4 +270,7 @@ table
 <
 /
 div
+>
+-
+-
 >
