--- a/layout/reftests/writing-mode/ua-style-sheet-margin-8.html
+++ b/layout/reftests/writing-mode/ua-style-sheet-margin-8.html
@@ -173,6 +173,22 @@ table
 div
 >
 <
+!
+-
+-
+disabled
+because
+tables
+are
+not
+yet
+vertical
+-
+aware
+;
+bug
+1077521
+<
 div
 class
 =
@@ -215,4 +231,7 @@ table
 <
 /
 div
+>
+-
+-
 >
