--- a/layout/style/test/test_parse_rule.html
+++ b/layout/style/test/test_parse_rule.html
@@ -3159,8 +3159,81 @@ close
 ;
 }
 ;
-doTests
+/
+/
+Running
+a
+debug
+build
+on
+the
+Android
+emulator
+is
+slooow
+and
+collecting
+/
+/
+all
+the
+session
+history
+this
+test
+amasses
+through
+repeated
+navigations
+/
+/
+adds
+considerably
+to
+the
+running
+time
+.
+Therefore
+we
+restrict
+the
+/
+/
+amount
+of
+session
+history
+we
+keep
+around
+during
+this
+test
+.
+SpecialPowers
+.
+pushPrefEnv
 (
+{
+"
+set
+"
+:
+[
+[
+'
+browser
+.
+sessionhistory
+.
+max_entries
+'
+4
+]
+]
+}
+doTests
 )
 ;
 }
