--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -2515,6 +2515,27 @@ end
 important
 ;
 }
+#
+verifiedManage
+:
+visited
+{
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+link
+-
+color
+)
+;
+}
 .
 fxaSyncIllustration
 {
