--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -5349,6 +5349,41 @@ color
 #
 FFEFBF
 ;
+/
+*
+Force
+border
+to
+override
+#
+PanelUI
+-
+footer
+-
+addons
+>
+toolbarbutton
+selector
+below
+*
+/
+border
+-
+top
+:
+1px
+solid
+hsl
+(
+45
+100
+%
+77
+%
+)
+!
+important
+;
 display
 :
 flex
