--- a/layout/style/test/test_selectors.html
+++ b/layout/style/test/test_selectors.html
@@ -14612,6 +14612,21 @@ anonymous
 "
 )
 ;
+test_balanced_unparseable
+(
+"
+:
+-
+moz
+-
+table
+-
+border
+-
+nonzero
+"
+)
+;
 /
 /
 Case
@@ -16334,160 +16349,6 @@ bodychildset
 [
 0
 2
-]
-)
-)
-;
-test_selector_in_html
-(
-"
-:
--
-moz
--
-table
--
-border
--
-nonzero
-"
-"
-<
-p
->
-<
-/
-p
->
-"
-+
-"
-<
-p
-border
-=
-'
-2
-'
->
-<
-/
-p
->
-"
-+
-"
-<
-table
-border
-=
-'
-2
-'
->
-<
-/
-table
->
-"
-+
-"
-<
-table
-border
->
-<
-/
-table
->
-"
-+
-"
-<
-table
->
-<
-/
-table
->
-"
-+
-"
-<
-table
-frame
-=
-'
-border
-'
->
-<
-/
-table
->
-"
-+
-"
-<
-table
-border
-=
-'
-0
-'
->
-<
-/
-table
->
-"
-+
-"
-<
-table
-border
-=
-'
-0pt
-'
->
-<
-/
-table
->
-"
-+
-"
-<
-table
-border
-=
-'
-3pt
-'
->
-<
-/
-table
->
-"
-bodychildset
-(
-[
-2
-3
-8
-]
-)
-bodychildset
-(
-[
-0
-1
-4
-5
-6
-7
 ]
 )
 )
