Bug 1341258 - update display of whitespace nodes in markup view;r=gl
MozReview-Commit-ID: 2Hcd9PH9R8g

UltraBlame original commit: 6bf5cd5c076bed47e23510ae33027f6ab6e204a2

--- a/devtools/client/themes/markup.css
+++ b/devtools/client/themes/markup.css
@@ -1587,9 +1587,21 @@ whitespace
 :
 before
 {
+/
+*
+black
+circle
+(
+full
+)
+character
+*
+/
 content
 :
 "
+\
+25cf
 "
 ;
 display
@@ -1598,18 +1610,35 @@ inline
 -
 block
 ;
-height
-:
-4px
-;
 width
 :
-4px
+12px
 ;
-border
+height
 :
-1px
-solid
+8px
+;
+margin
+:
+0
+2px
+;
+line
+-
+height
+:
+7px
+;
+font
+-
+size
+:
+0
+.
+6em
+;
+color
+:
 var
 (
 -
@@ -1627,8 +1656,31 @@ border
 -
 radius
 :
-50
-%
+3px
+;
+border
+-
+style
+:
+solid
+;
+border
+-
+width
+:
+1px
+;
+text
+-
+align
+:
+center
+;
+vertical
+-
+align
+:
+middle
 ;
 }
 .
@@ -1648,8 +1700,6 @@ whitespace
 :
 before
 {
-border
--
 color
 :
 white
