Bug 1340085 - [Pointer Event] Stop firing pointer events after firing eTouchCancel. f=smaug. r=kats
UltraBlame original commit: 317ab487c1234b8159d81b29fd32a34e8d69823c

--- a/layout/base/tests/bug970964_inner.html
+++ b/layout/base/tests/bug970964_inner.html
@@ -942,23 +942,36 @@ pointerCancelTriggered
 =
 0
 ;
+/
+/
+Test
+pointer
+event
+generated
+from
+mouse
+event
 d0
 .
-onmousedown
-=
-function
+addEventListener
+(
+"
+mousedown
+"
 (
 e
 )
-{
-mouseDownTriggered
 =
-1
+>
+{
++
++
+mouseDownTriggered
 ;
 is
 (
 pointerDownTriggered
-1
+mouseDownTriggered
 "
 Mouse
 event
@@ -973,87 +986,223 @@ event
 )
 ;
 }
+{
+once
+:
+true
+}
+)
 ;
 d0
 .
-ontouchstart
-=
-function
+addEventListener
+(
+"
+pointerdown
+"
 (
 e
 )
-{
-touchDownTriggered
 =
-1
+>
+{
++
++
+pointerDownTriggered
 ;
 is
 (
-touchDownTriggered
+pointerDownTriggered
+mouseDownTriggered
++
 1
 "
-Touch
+Pointer
 event
 must
 be
 triggered
-after
-pointer
+before
+mouse
 event
 !
 "
 )
 ;
 }
-d0
-.
-ontouchcancel
-=
-function
-(
-e
-)
 {
-touchCancelTriggered
-=
-1
+once
+:
+true
+}
+)
 ;
-is
+synthesizeMouse
 (
-pointerCancelTriggered
-1
+d1
+3
+3
+{
+type
+:
 "
-Touch
-cancel
-event
-must
-be
-triggered
-after
+mousemove
+"
+}
+)
+;
+synthesizeMouse
+(
+d1
+3
+3
+{
+type
+:
+"
+mousedown
+"
+}
+)
+;
+synthesizeMouse
+(
+d1
+3
+3
+{
+type
+:
+"
+mouseup
+"
+}
+)
+;
+/
+/
+Test
 pointer
 event
-!
-"
-)
-;
-}
-d0
-.
-onpointerdown
+generated
+from
+touch
+event
+mouseDownTriggered
 =
-function
-(
-e
-)
-{
+0
+;
 pointerDownTriggered
 =
-1
+0
+;
+d0
+.
+addEventListener
+(
+"
+touchstart
+"
+(
+e
+)
+=
+>
+{
++
++
+touchDownTriggered
 ;
 is
 (
+pointerDownTriggered
+touchDownTriggered
+"
+Touch
+event
+must
+be
+triggered
+after
+pointer
+event
+!
+"
+)
+;
+}
+{
+once
+:
+true
+}
+)
+;
+d0
+.
+addEventListener
+(
+"
+mousedown
+"
+(
+e
+)
+=
+>
+{
++
++
 mouseDownTriggered
-0
+;
+is
+(
+pointerDownTriggered
+mouseDownTriggered
+"
+Mouse
+event
+must
+be
+triggered
+after
+pointer
+event
+!
+"
+)
+;
+}
+{
+once
+:
+true
+}
+)
+;
+d0
+.
+addEventListener
+(
+"
+pointerdown
+"
+(
+e
+)
+=
+>
+{
++
++
+pointerDownTriggered
+;
+is
+(
+pointerDownTriggered
+touchDownTriggered
++
+1
 "
 Pointer
 event
@@ -1069,8 +1218,10 @@ event
 ;
 is
 (
-touchDownTriggered
-0
+pointerDownTriggered
+mouseDownTriggered
++
+1
 "
 Pointer
 event
@@ -1078,13 +1229,62 @@ must
 be
 triggered
 before
-touch
+mouse
 event
 !
 "
 )
 ;
 }
+{
+once
+:
+true
+}
+)
+;
+d0
+.
+addEventListener
+(
+"
+touchcancel
+"
+(
+e
+)
+=
+>
+{
++
++
+touchCancelTriggered
+;
+is
+(
+pointerCancelTriggered
+touchCancelTriggered
+"
+Touch
+cancel
+event
+must
+be
+triggered
+after
+pointer
+event
+!
+"
+)
+;
+}
+{
+once
+:
+true
+}
+)
 ;
 d0
 .
@@ -1140,14 +1340,16 @@ false
 "
 )
 ;
++
++
 pointerCancelTriggered
-=
-1
 ;
 is
 (
+pointerCancelTriggered
 touchCancelTriggered
-0
++
+1
 "
 Pointer
 event
@@ -1168,74 +1370,6 @@ once
 true
 }
 )
-;
-/
-/
-Test
-pointer
-event
-generated
-from
-mouse
-event
-synthesizeMouse
-(
-d1
-3
-3
-{
-type
-:
-"
-mousemove
-"
-}
-)
-;
-synthesizeMouse
-(
-d1
-3
-3
-{
-type
-:
-"
-mousedown
-"
-}
-)
-;
-synthesizeMouse
-(
-d1
-3
-3
-{
-type
-:
-"
-mouseup
-"
-}
-)
-;
-/
-/
-Test
-pointer
-event
-generated
-from
-touch
-event
-pointerDownTriggered
-=
-0
-;
-mouseDownTriggered
-=
-0
 ;
 var
 cwu
@@ -1261,7 +1395,7 @@ sendTouchEvent
 (
 cwu
 "
-touchmove
+touchstart
 "
 event1
 0
@@ -1271,7 +1405,7 @@ sendTouchEvent
 (
 cwu
 "
-touchstart
+touchmove
 "
 event1
 0
@@ -1854,6 +1988,21 @@ type
 mousemove
 "
 }
+)
+;
+sendTouchEvent
+(
+cwu
+"
+touchstart
+"
+getTouchEventForTarget
+(
+d3
+cwu
+3
+)
+0
 )
 ;
 sendTouchEvent
