Bug 1337235 - Mouseover interaction for grid outline. r=gl
MozReview-Commit-ID: 4qZfle2lDMZ

UltraBlame original commit: 0a15dfecc9fa2b375e5de3ad6f195516b1de2d2f

--- a/devtools/client/themes/layout.css
+++ b/devtools/client/themes/layout.css
@@ -265,10 +265,6 @@ outline
 -
 cell
 {
-fill
-:
-none
-;
 pointer
 -
 events
@@ -283,6 +279,22 @@ dasharray
 .
 5
 2
+;
+}
+.
+grid
+-
+outline
+-
+cell
+:
+hover
+{
+opacity
+:
+0
+.
+45
 ;
 }
 /
