Bug 1302197 - Implement the option to show grid cell highlights in the CSS Grid Highlighter. r=pbro
MozReview-Commit-ID: BSs9tPksPgA

UltraBlame original commit: 51bf67737ecb58976dcbe96d0771f28268a0ee5d

--- a/devtools/server/actors/highlighters.css
+++ b/devtools/server/actors/highlighters.css
@@ -1781,6 +1781,19 @@ css
 grid
 -
 areas
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+css
+-
+grid
+-
+cells
 {
 fill
 :
@@ -1804,9 +1817,28 @@ css
 -
 grid
 -
+area
+-
 infobar
 -
-areaname
+name
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+css
+-
+grid
+-
+cell
+-
+infobar
+-
+position
 {
 color
 :
