Bug 1343478 - add missing css variables from devtools.html to variables.css;r=jlast
MozReview-Commit-ID: A7LthrT7ccu

UltraBlame original commit: e28df8c208a04ee68c0771d61020f2167f636d41

--- a/devtools/client/themes/variables.css
+++ b/devtools/client/themes/variables.css
@@ -245,6 +245,19 @@ theme
 -
 toolbar
 -
+background
+-
+alt
+:
+#
+f5f5f5
+;
+-
+-
+theme
+-
+toolbar
+-
 hover
 :
 rgba
@@ -336,6 +349,17 @@ comment
 :
 #
 696969
+;
+-
+-
+theme
+-
+comment
+-
+alt
+:
+#
+ccd1d5
 ;
 -
 -
@@ -937,6 +961,19 @@ theme
 -
 toolbar
 -
+background
+-
+alt
+:
+#
+2F343E
+;
+-
+-
+theme
+-
+toolbar
+-
 hover
 :
 rgba
@@ -1030,6 +1067,17 @@ comment
 :
 #
 757873
+;
+-
+-
+theme
+-
+comment
+-
+alt
+:
+#
+5a6375
 ;
 -
 -
