Bug 1335608 - add a button to select hidden tools when toolbox toolbar overflows;r=gregtatum
MozReview-Commit-ID: HgfSteV6WXy

UltraBlame original commit: c865b539abeab0daaa42083088adeaf35f8458e2

--- a/devtools/client/themes/toolbox.css
+++ b/devtools/client/themes/toolbox.css
@@ -795,6 +795,10 @@ flex
 :
 1
 ;
+overflow
+:
+hidden
+;
 }
 .
 toolbox
@@ -814,6 +818,55 @@ flex
 flex
 :
 1
+;
+}
+.
+toolbox
+-
+tabs
+-
+wrapper
+.
+all
+-
+tools
+-
+menu
+{
+border
+-
+inline
+-
+end
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+border
+-
+top
+-
+width
+:
+0
+;
+border
+-
+bottom
+-
+width
+:
+0
 ;
 }
 .
