Bug 1270006 - Fill portion of the icon on download button as indicator to download progress r=Paolo
MozReview-Commit-ID: BqYow8jWCVD

UltraBlame original commit: 74f078c39e3c2f82411a373a638d3c94c7644e63

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -6721,6 +6721,8 @@ none
 downloads
 -
 button
+.
+withProgressBar
 :
 -
 moz
@@ -6766,6 +6768,63 @@ counter
 paused
 ]
 )
+)
+#
+downloads
+-
+indicator
+-
+progress
+-
+area
+{
+visibility
+:
+hidden
+;
+}
+/
+*
+Hide
+elements
+for
+another
+type
+of
+progressmeter
+if
+it
+'
+s
+not
+in
+use
+.
+*
+/
+#
+downloads
+-
+button
+.
+withProgressBar
+#
+downloads
+-
+indicator
+-
+progress
+-
+icon
+#
+downloads
+-
+button
+:
+not
+(
+.
+withProgressBar
 )
 #
 downloads
