--- a/browser/themes/linux/downloads/indicator.css
+++ b/browser/themes/linux/downloads/indicator.css
@@ -56,6 +56,23 @@ MPL
 .
 *
 /
+%
+include
+.
+.
+/
+.
+.
+/
+shared
+/
+downloads
+/
+indicator
+.
+inc
+.
+css
 /
 *
 *
@@ -196,7 +213,7 @@ downloads
 -
 indicator
 -
-icon
+image
 :
 -
 moz
@@ -233,7 +250,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 :
@@ -272,7 +289,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 inverted
 :
@@ -313,7 +330,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 -
@@ -374,7 +391,7 @@ downloads
 -
 indicator
 -
-icon
+image
 :
 -
 moz
@@ -412,7 +429,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 :
@@ -452,7 +469,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 inverted
 :
@@ -494,7 +511,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 -
@@ -572,7 +589,7 @@ downloads
 -
 indicator
 -
-icon
+image
 )
 center
 no
@@ -649,7 +666,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 inverted
 )
@@ -993,7 +1010,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 )
@@ -1050,7 +1067,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 -
@@ -1203,7 +1220,7 @@ downloads
 -
 indicator
 -
-icon
+image
 )
 center
 no
@@ -1279,7 +1296,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 inverted
 )
@@ -1339,7 +1356,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 )
@@ -1403,7 +1420,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 -
