--- a/browser/themes/osx/downloads/indicator.css
+++ b/browser/themes/osx/downloads/indicator.css
@@ -56,6 +56,23 @@ MPL
 .
 *
 /
+%
+include
+.
+.
+/
+.
+.
+/
+shared
+/
+downloads
+/
+indicator
+.
+inc
+.
+css
 /
 *
 *
@@ -194,11 +211,15 @@ icon
 #
 downloads
 -
+button
+{
+-
+-
+downloads
+-
 indicator
 -
-icon
-{
-background
+image
 :
 -
 moz
@@ -228,26 +249,55 @@ png
 18
 180
 )
-center
-no
--
-repeat
 ;
-}
-toolbar
-[
-brighttext
-]
-#
+-
+-
 downloads
 -
 indicator
 -
-icon
-{
-background
+image
+-
+attention
+:
+-
+moz
 -
 image
+-
+rect
+(
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Toolbar
+.
+png
+"
+)
+36
+198
+54
+180
+)
+;
+-
+-
+downloads
+-
+indicator
+-
+image
+-
+inverted
 :
 -
 moz
@@ -278,6 +328,289 @@ png
 198
 18
 180
+)
+;
+-
+-
+downloads
+-
+indicator
+-
+image
+-
+attention
+-
+inverted
+:
+-
+moz
+-
+image
+-
+rect
+(
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Toolbar
+-
+inverted
+.
+png
+"
+)
+36
+198
+54
+180
+)
+;
+}
+media
+(
+min
+-
+resolution
+:
+2dppx
+)
+{
+#
+downloads
+-
+button
+{
+-
+-
+downloads
+-
+indicator
+-
+image
+:
+-
+moz
+-
+image
+-
+rect
+(
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Toolbar
+2x
+.
+png
+"
+)
+0
+396
+36
+360
+)
+;
+-
+-
+downloads
+-
+indicator
+-
+image
+-
+attention
+:
+-
+moz
+-
+image
+-
+rect
+(
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Toolbar
+2x
+.
+png
+"
+)
+72
+396
+108
+360
+)
+;
+-
+-
+downloads
+-
+indicator
+-
+image
+-
+inverted
+:
+-
+moz
+-
+image
+-
+rect
+(
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Toolbar
+-
+inverted
+2x
+.
+png
+"
+)
+0
+396
+36
+360
+)
+;
+-
+-
+downloads
+-
+indicator
+-
+image
+-
+attention
+-
+inverted
+:
+-
+moz
+-
+image
+-
+rect
+(
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Toolbar
+-
+inverted
+2x
+.
+png
+"
+)
+72
+396
+108
+360
+)
+;
+}
+}
+#
+downloads
+-
+indicator
+-
+icon
+{
+background
+:
+var
+(
+-
+-
+downloads
+-
+indicator
+-
+image
+)
+center
+no
+-
+repeat
+;
+background
+-
+size
+:
+18px
+;
+}
+toolbar
+[
+brighttext
+]
+#
+downloads
+-
+indicator
+-
+icon
+{
+background
+-
+image
+:
+var
+(
+-
+-
+downloads
+-
+indicator
+-
+image
+-
+inverted
 )
 ;
 }
@@ -584,33 +917,17 @@ background
 -
 image
 :
+var
+(
 -
-moz
+-
+downloads
+-
+indicator
 -
 image
 -
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
-.
-png
-"
-)
-36
-198
-54
-180
+attention
 )
 ;
 }
@@ -648,35 +965,19 @@ background
 -
 image
 :
+var
+(
 -
-moz
+-
+downloads
+-
+indicator
 -
 image
 -
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
+attention
 -
 inverted
-.
-png
-"
-)
-36
-198
-54
-180
 )
 ;
 }
@@ -817,33 +1118,15 @@ counter
 {
 background
 :
+var
+(
 -
-moz
+-
+downloads
+-
+indicator
 -
 image
--
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
-.
-png
-"
-)
-0
-198
-18
-180
 )
 center
 no
@@ -911,35 +1194,17 @@ background
 -
 image
 :
+var
+(
 -
-moz
+-
+downloads
+-
+indicator
 -
 image
 -
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
--
 inverted
-.
-png
-"
-)
-0
-198
-18
-180
 )
 ;
 }
@@ -989,33 +1254,17 @@ background
 -
 image
 :
+var
+(
 -
-moz
+-
+downloads
+-
+indicator
 -
 image
 -
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
-.
-png
-"
-)
-36
-198
-54
-180
+attention
 )
 ;
 }
@@ -1069,35 +1318,19 @@ background
 -
 image
 :
+var
+(
 -
-moz
+-
+downloads
+-
+indicator
 -
 image
 -
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
+attention
 -
 inverted
-.
-png
-"
-)
-36
-198
-54
-180
 )
 ;
 }
@@ -1110,376 +1343,6 @@ resolution
 2dppx
 )
 {
-#
-downloads
--
-indicator
--
-icon
-{
-background
--
-image
-:
--
-moz
--
-image
--
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
-2x
-.
-png
-"
-)
-0
-396
-36
-360
-)
-;
-background
--
-size
-:
-18px
-;
-}
-toolbar
-[
-brighttext
-]
-#
-downloads
--
-indicator
--
-icon
-{
-background
--
-image
-:
--
-moz
--
-image
--
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
--
-inverted
-2x
-.
-png
-"
-)
-0
-396
-36
-360
-)
-;
-}
-#
-downloads
--
-button
-:
-not
-(
-[
-counter
-]
-)
->
-#
-downloads
--
-indicator
--
-anchor
->
-#
-downloads
--
-indicator
--
-progress
--
-area
->
-#
-downloads
--
-indicator
--
-counter
-{
-background
--
-image
-:
--
-moz
--
-image
--
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
-2x
-.
-png
-"
-)
-0
-396
-36
-360
-)
-;
-}
-toolbar
-[
-brighttext
-]
-#
-downloads
--
-button
-:
-not
-(
-[
-counter
-]
-)
->
-#
-downloads
--
-indicator
--
-anchor
->
-#
-downloads
--
-indicator
--
-progress
--
-area
->
-#
-downloads
--
-indicator
--
-counter
-{
-background
--
-image
-:
--
-moz
--
-image
--
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
--
-inverted
-2x
-.
-png
-"
-)
-0
-396
-36
-360
-)
-;
-}
-#
-downloads
--
-button
-[
-attention
-=
-"
-success
-"
-]
->
-#
-downloads
--
-indicator
--
-anchor
->
-#
-downloads
--
-indicator
--
-icon
-{
-background
--
-image
-:
--
-moz
--
-image
--
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
-2x
-.
-png
-"
-)
-72
-396
-108
-360
-)
-;
-}
-toolbar
-[
-brighttext
-]
-#
-downloads
--
-button
-[
-attention
-=
-"
-success
-"
-]
->
-#
-downloads
--
-indicator
--
-anchor
->
-#
-downloads
--
-indicator
--
-icon
-{
-background
--
-image
-:
--
-moz
--
-image
--
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
--
-inverted
-2x
-.
-png
-"
-)
-72
-396
-108
-360
-)
-;
-}
 #
 downloads
 -
@@ -1534,166 +1397,6 @@ png
 )
 ;
 }
-#
-downloads
--
-button
-:
-not
-(
-[
-counter
-]
-)
-[
-attention
-=
-"
-success
-"
-]
->
-#
-downloads
--
-indicator
--
-anchor
->
-#
-downloads
--
-indicator
--
-progress
--
-area
->
-#
-downloads
--
-indicator
--
-counter
-{
-background
--
-image
-:
--
-moz
--
-image
--
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
-2x
-.
-png
-"
-)
-72
-396
-108
-360
-)
-;
-}
-toolbar
-[
-brighttext
-]
-#
-downloads
--
-button
-:
-not
-(
-[
-counter
-]
-)
-[
-attention
-=
-"
-success
-"
-]
->
-#
-downloads
--
-indicator
--
-anchor
->
-#
-downloads
--
-indicator
--
-progress
--
-area
->
-#
-downloads
--
-indicator
--
-counter
-{
-background
--
-image
-:
--
-moz
--
-image
--
-rect
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
--
-inverted
-2x
-.
-png
-"
-)
-72
-396
-108
-360
-)
-;
-}
 }
 /
 *
@@ -1745,6 +1448,18 @@ height
 16px
 ;
 }
+/
+*
+*
+*
+Progress
+bar
+and
+text
+*
+*
+*
+/
 keyframes
 downloadsIndicatorNotificationStartRight
 {
