--- a/browser/themes/windows/downloads/indicator.css
+++ b/browser/themes/windows/downloads/indicator.css
@@ -56,6 +56,23 @@ MPL
 .
 *
 /
+%
+include
+.
+.
+/
+.
+.
+/
+shared
+/
+downloads
+/
+indicator
+.
+inc
+.
+css
 /
 *
 *
@@ -196,7 +213,7 @@ downloads
 -
 indicator
 -
-icon
+image
 :
 -
 moz
@@ -233,7 +250,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 :
@@ -272,7 +289,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 inverted
 :
@@ -313,7 +330,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 -
@@ -374,7 +391,7 @@ downloads
 -
 indicator
 -
-icon
+image
 :
 -
 moz
@@ -412,7 +429,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 :
@@ -452,7 +469,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 inverted
 :
@@ -494,7 +511,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 -
@@ -551,7 +568,7 @@ downloads
 -
 indicator
 -
-icon
+image
 )
 center
 no
@@ -619,7 +636,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 inverted
 )
@@ -936,7 +953,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 )
@@ -984,7 +1001,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 -
@@ -1137,7 +1154,7 @@ downloads
 -
 indicator
 -
-icon
+image
 )
 center
 no
@@ -1213,7 +1230,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 inverted
 )
@@ -1273,7 +1290,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 )
@@ -1337,7 +1354,7 @@ downloads
 -
 indicator
 -
-icon
+image
 -
 attention
 -
