Bug 1340799 - Add a test for clicking hash links in reader mode to scroll to the anchor, r=Gijs
MozReview-Commit-ID: EzoVcuW2qm4

UltraBlame original commit: 362a5654bf6b83ecea81d7ba38771736efc48639

--- a/toolkit/components/reader/test/readerModeArticle.html
+++ b/toolkit/components/reader/test/readerModeArticle.html
@@ -66,6 +66,43 @@ title
 h1
 >
 <
+ul
+>
+<
+li
+>
+<
+a
+id
+=
+"
+foo
+-
+anchor
+"
+href
+=
+"
+#
+foo
+"
+>
+by
+John
+Doe
+<
+/
+a
+>
+<
+/
+li
+>
+<
+/
+ul
+>
+<
 h2
 class
 =
