Bug 1343528 - Remove --toolbarbutton-vertical-outer-padding. r=Gijs
MozReview-Commit-ID: 3ApLA0Ennaz

UltraBlame original commit: 47ca6f095807f0e652fbfa028a78e2ef28c8bfa2

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -278,18 +278,6 @@ padding
 -
 toolbarbutton
 -
-vertical
--
-outer
--
-padding
-:
-8px
-;
--
--
-toolbarbutton
--
 hover
 -
 background
@@ -5927,18 +5915,7 @@ dropmarker
 {
 padding
 :
-var
-(
--
--
-toolbarbutton
--
-vertical
--
-outer
--
-padding
-)
+0
 2px
 ;
 -
@@ -11298,18 +11275,6 @@ inner
 padding
 :
 4px
-;
--
--
-toolbarbutton
--
-vertical
--
-outer
--
-padding
-:
-5px
 ;
 }
 }
